--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.4",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.1.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
